# adseq

./: .gitignore  README.md  README.template.md  build-doc-tree.py  build-docs.sh  plotfig2.py  poisson_experiment.py  profile_lossy_queues.py  pyproject.toml  synapse.py  synapse2.py  test_all.py  test_grad.py  test_impls.py
.github/workflows/: python-publish.yml
adseq/: __init__.py  synapse.py  synapse2.py
adseq/benchmarks/: __init__.py  profile_jaxley.py  profile_lossy_queues.py  profile_poisson.py  profile_recurrent_snn.py
adseq/bridges/: flax_bridge.py  jaxley_bridge.py
adseq/implementations/: bgpq1.py  binary_heap.py  fifo_ring.py  lossy_ring.py  single_spike.py  single_spike_keep.py  sorted_array.py
benchmarks/: Groqhost1_cpu_groq.json  Groqhost1_cpu_jax.json  __init__.py  caps_spectre_cpu_jax.json  henkdenktenk_docker_cpu_jax.json  henkdenktenk_docker_gpu_jax.json  henkdenktenk_docker_gpu_jax_grad.json  lennartpc_cpu.json  lennartpc_gpu.json  lennartpc_gpu_jax.json  lennartpc_gpu_jax_grad.json  mk_table.py  plot.py  poisson_experiment.py  profile_jaxley.py  profile_lossy_queues.py  profile_poisson.py  profile_recurrent_snn.py  rlif.py  sizes_spectre_cpu_jax.json  spectre_cpu_grad.json  spectre_cpu_jax.json  spectre_cpu_jax_grad.json  spectre_cpu_onnxrt.json  spectre_cpu_openvino.json  table.tex
docs/: index.html  synapse.html  synapse2.html
docs/bridges/: index.html  (+3 more)
examples/: flax_sglif.py  jaxley_delays.py  yy_example.py
hosts/: tpu.md
implementations/: __init__.py  base.py  bgpq1.py  binary_heap.py  do_nothing.py  fifo_ring.py  gradient_queue.py  lossy_ring.py  ring.py  single_spike.py  sorted_array.py
tests/: grad.py  impls.py  synaps.py  test_apply_recv_gradient.py  test_grad.py  test_multisynapse.py  test_queues.py  test_runners.py  test_spike_detect.py  test_synapse.py  test_synapse_vjp.py  test_vjp.py
(+19 files in other folders)
